<resources>
    <string name="app_name">GestureQuest</string>
    <string name="add">Добавить</string>
    <string name="done">Готово</string>
    <string name="search_menu_title">Search</string>
    <string name="settings_gesture">Жест для входа в настройки</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="undefined">Не определен</string>
    <string name="unlock_gesture">Жест для разблокировки замка</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_settings_gestrue">Изменить</string>
    <string name="gesture_accuracy">Требуемая точность жестов</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bt_device_connect">Bluetooth</string>
    <string name="connect">ПОДКЛЮЧИТЬСЯ</string>
    <string name="disconnect">ОТКЛЮЧИТЬСЯ</string>
    <string name="disconnect_from_monitor">Вы действительно ххотите отключиться?</string>
    <string name="connected_status">Подключен</string>
    <string name="not_connected_status">Не подключен</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="wait_command">Ждать команды на определение</string>
</resources>
