<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/unlock_gesture"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="#8a8ddf" />

    <LinearLayout
        android:id="@+id/ll_unlock_undefined_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_weight="1.0"
            android:text="@string/undefined"/>

        <Button
            android:id="@+id/btn_unlock_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_background"
            android:text="@string/add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_unlock_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_unlock_preview"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/btn_unlock_edit"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:text="@string/edit_settings_gestrue" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="#8a8ddf" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gesture_accuracy" />

        <SeekBar
            android:id="@+id/sb_accuracy"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="90" />

        <Button
            android:id="@+id/btn_done"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_background"
            android:text="@string/done" />

        <Button
            android:id="@+id/btn_bluetooth_dg"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/bluetooth" />
    </LinearLayout>

</LinearLayout>
